Closed Bug 426738 Opened 17 years ago Closed 17 years ago

SVG text in hyperlink appears to have incorrect length

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: duncan.loveday, Assigned: longsonr)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files, 2 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008040112 Minefield/3.0pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008040112 Minefield/3.0pre Some SVG hyperlinks containing text appear to have a "mouse active" region (if that is the right term) not covering the whole of the text. Reproducible: Always Steps to Reproduce: 1. Open this attachment https://bugzilla.mozilla.org/attachment.cgi?id=312910 from bug 425662 2. Click on the word "me" within "click me" 3. Actual Results: Nothing happens Expected Results: The hyperlink should activate, displaying an alert. The hyperlink is only activated when clicking on the word "click" within "click me".
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → longsonr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #313408 - Flags: superreview?(roc)
Attachment #313408 - Flags: review?(roc)
Depends on: 392233
No longer depends on: 425662
Blocks: 392233
No longer depends on: 392233
Blocks: 425662
Hmm, why is this correct? MeasureText returns appunits, so shouldn't we be doing SetupForMetrics?
Attached image simpler testcase (obsolete) —
Attachment #313789 - Attachment is obsolete: true
Attachment #313408 - Flags: superreview?(roc)
Attachment #313408 - Flags: review?(roc)
(In reply to comment #3) > Hmm, why is this correct? MeasureText returns appunits, so shouldn't we be > doing SetupForMetrics? > My new testcase shows you are right. The patch breaks textPath (which currently works). I'll try to figure out what it is about textPath that is working when text is not.
Flags: wanted1.9+
Attached patch corrected patchSplinter Review
The advance width is in app units.
Attachment #313408 - Attachment is obsolete: true
Attachment #313955 - Flags: superreview?(roc)
Attachment #313955 - Flags: review?(roc)
Comment on attachment 313955 [details] [diff] [review] corrected patch Bingo! Good work!
Attachment #313955 - Flags: superreview?(roc)
Attachment #313955 - Flags: superreview+
Attachment #313955 - Flags: review?(roc)
Attachment #313955 - Flags: review+
Comment on attachment 313955 [details] [diff] [review] corrected patch Simple fix for a recent regression.
Attachment #313955 - Flags: approval1.9?
Comment on attachment 313955 [details] [diff] [review] corrected patch a1.9=beltzner
Attachment #313955 - Flags: approval1.9? → approval1.9+
checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: