Bug 426738 - SVG text in hyperlink appears to have incorrect length. r+sr=roc,a1.9=beltzner